--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
     "version": "1.0.0",
     "description": "The best way to watch videos.",
     "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/ghk0409/Ongtube.git"
@@ -21,5 +18,8 @@
     "bugs": {
         "url": "https://github.com/ghk0409/Ongtube/issues"
     },
-    "homepage": "https://github.com/ghk0409/Ongtube#readme"
+    "homepage": "https://github.com/ghk0409/Ongtube#readme",
+    "dependencies": {
+        "express": "^4.18.1"
+    }
 }
