--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
         "videos",
         "Youtube"
     ],
+    "scripts": {
+        "dev": "nodemon --exec babel-node index.js"
+    },
     "author": "Ongs<JIHONG KIM>",
     "license": "MIT",
     "bugs": {
@@ -21,5 +24,11 @@
     "homepage": "https://github.com/ghk0409/Ongtube#readme",
     "dependencies": {
         "express": "^4.18.1"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.17.10",
+        "@babel/node": "^7.17.10",
+        "@babel/preset-env": "^7.17.10",
+        "nodemon": "^2.0.16"
     }
 }
