express 첫 서버 구현
server.js 구성

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "Youtube"
     ],
     "scripts": {
-        "dev": "nodemon --exec babel-node index.js"
+        "dev": "nodemon --exec babel-node src/server.js"
     },
     "author": "Ongs<JIHONG KIM>",
     "license": "MIT",
