--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     },
     "homepage": "https://github.com/ghk0409/Ongtube#readme",
     "dependencies": {
-        "express": "^4.18.1"
+        "express": "^4.18.1",
+        "morgan": "^1.10.0"
     },
     "devDependencies": {
         "@babel/core": "^7.17.10",
