--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "homepage": "https://github.com/ghk0409/Ongtube#readme",
     "dependencies": {
         "express": "^4.18.1",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "pug": "^3.0.2"
     },
     "devDependencies": {
         "@babel/core": "^7.17.10",
