--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "homepage": "https://github.com/ghk0409/Ongtube#readme",
     "dependencies": {
         "express": "^4.18.1",
+        "mongoose": "^6.4.0",
         "morgan": "^1.10.0",
         "pug": "^3.0.2"
     },
