--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "Youtube"
     ],
     "scripts": {
-        "dev": "nodemon --exec babel-node src/server.js"
+        "dev": "nodemon --exec babel-node src/init.js"
     },
     "author": "Ongs<JIHONG KIM>",
     "license": "MIT",
