--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "homepage": "https://github.com/ghk0409/Ongtube#readme",
     "dependencies": {
+        "bcrypt": "^5.0.1",
         "express": "^4.18.1",
         "mongoose": "^6.4.0",
         "morgan": "^1.10.0",
