--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "homepage": "https://github.com/ghk0409/Ongtube#readme",
     "dependencies": {
         "bcrypt": "^5.0.1",
+        "connect-mongo": "^4.6.0",
+        "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "express-session": "^1.17.3",
         "mongoose": "^6.4.0",
