--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "Youtube"
     ],
     "scripts": {
-        "dev": "nodemon --exec babel-node src/init.js"
+        "dev:server": "nodemon",
+        "dev:assets": "webpack"
     },
     "author": "Ongs<JIHONG KIM>",
     "license": "MIT",
@@ -38,6 +39,14 @@
         "@babel/core": "^7.17.10",
         "@babel/node": "^7.17.10",
         "@babel/preset-env": "^7.17.10",
-        "nodemon": "^2.0.16"
+        "babel-loader": "^8.2.5",
+        "css-loader": "^6.7.1",
+        "mini-css-extract-plugin": "^2.6.1",
+        "nodemon": "^2.0.16",
+        "sass": "^1.53.0",
+        "sass-loader": "^13.0.2",
+        "style-loader": "^3.3.1",
+        "webpack": "^5.73.0",
+        "webpack-cli": "^4.10.0"
     }
 }
