댓글 삭제 기능 추가 및 배포 준비
- 댓글 삭제 기능 구현 (댓글 삭제 시, 해당 댓글 ID를 User, Video에서 삭제)
- 프론트엔드 및 백엔드 부분 코드 배포용 빌드 스크립트 추가

--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
         "Youtube"
     ],
     "scripts": {
+        "start": "node build/init.js",
+        "build": "npm run build:server && npm run build:assets",
+        "build:server": "babel src -d build",
+        "build:assets": "webpack --mode=production",
         "dev:server": "nodemon",
-        "dev:assets": "webpack"
+        "dev:assets": "webpack --mode=development -w"
     },
     "author": "Ongs<JIHONG KIM>",
     "license": "MIT",
@@ -40,6 +44,7 @@
         "regenerator-runtime": "^0.13.9"
     },
     "devDependencies": {
+        "@babel/cli": "^7.18.9",
         "@babel/core": "^7.17.10",
         "@babel/node": "^7.17.10",
         "@babel/preset-env": "^7.17.10",
